@@ -1,4 +1,4 @@
-/* A recursive-descent parser generated by peg 0.1.17 */
+/* A recursive-descent parser generated by peg 0.1.18 */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -312,6 +312,7 @@ YY_ACTION(void) yy_7_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_7_Primary\n"));
   {
+#line 0
    push(makePredicate("YY_END")); ;
   }
 #undef yythunkpos
@@ -325,6 +326,7 @@ YY_ACTION(void) yy_6_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_6_Primary\n"));
   {
+#line 0
    push(makePredicate("YY_BEGIN")); ;
   }
 #undef yythunkpos
@@ -338,7 +340,8 @@ YY_ACTION(void) yy_5_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_5_Primary\n"));
   {
-   push(makeAction(yytext)); ;
+#line 0
+   push(makeAction(0, yytext)); ;
   }
 #undef yythunkpos
 #undef yypos
@@ -351,6 +354,7 @@ YY_ACTION(void) yy_4_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_4_Primary\n"));
   {
+#line 0
    push(makeDot()); ;
   }
 #undef yythunkpos
@@ -364,6 +368,7 @@ YY_ACTION(void) yy_3_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_3_Primary\n"));
   {
+#line 0
    push(makeClass(yytext)); ;
   }
 #undef yythunkpos
@@ -377,6 +382,7 @@ YY_ACTION(void) yy_2_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_2_Primary\n"));
   {
+#line 0
    push(makeString(yytext)); ;
   }
 #undef yythunkpos
@@ -390,6 +396,7 @@ YY_ACTION(void) yy_1_Primary(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_1_Primary\n"));
   {
+#line 0
    push(makeName(findRule(yytext))); ;
   }
 #undef yythunkpos
@@ -403,6 +410,7 @@ YY_ACTION(void) yy_3_Suffix(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_3_Suffix\n"));
   {
+#line 0
    push(makePlus (pop())); ;
   }
 #undef yythunkpos
@@ -416,6 +424,7 @@ YY_ACTION(void) yy_2_Suffix(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_2_Suffix\n"));
   {
+#line 0
    push(makeStar (pop())); ;
   }
 #undef yythunkpos
@@ -429,6 +438,7 @@ YY_ACTION(void) yy_1_Suffix(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_1_Suffix\n"));
   {
+#line 0
    push(makeQuery(pop())); ;
   }
 #undef yythunkpos
@@ -442,6 +452,7 @@ YY_ACTION(void) yy_3_Prefix(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_3_Prefix\n"));
   {
+#line 0
    push(makePeekNot(pop())); ;
   }
 #undef yythunkpos
@@ -455,6 +466,7 @@ YY_ACTION(void) yy_2_Prefix(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_2_Prefix\n"));
   {
+#line 0
    push(makePeekFor(pop())); ;
   }
 #undef yythunkpos
@@ -468,6 +480,7 @@ YY_ACTION(void) yy_1_Prefix(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_1_Prefix\n"));
   {
+#line 0
    push(makePredicate(yytext)); ;
   }
 #undef yythunkpos
@@ -481,6 +494,7 @@ YY_ACTION(void) yy_2_Sequence(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_2_Sequence\n"));
   {
+#line 0
    push(makePredicate("1")); ;
   }
 #undef yythunkpos
@@ -494,6 +508,7 @@ YY_ACTION(void) yy_1_Sequence(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_1_Sequence\n"));
   {
+#line 0
    Node *f= pop();  push(Sequence_append(pop(), f)); ;
   }
 #undef yythunkpos
@@ -507,6 +522,7 @@ YY_ACTION(void) yy_1_Expression(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_1_Expression\n"));
   {
+#line 0
    Node *f= pop();  push(Alternate_append(pop(), f)); ;
   }
 #undef yythunkpos
@@ -520,6 +536,7 @@ YY_ACTION(void) yy_2_Definition(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_2_Definition\n"));
   {
+#line 0
    Node *e= pop();  Rule_setExpression(pop(), e); ;
   }
 #undef yythunkpos
@@ -533,6 +550,7 @@ YY_ACTION(void) yy_1_Definition(yycontext *yy, char *yytext, int yyleng)
 #define yythunkpos yy->__thunkpos
   yyprintf((stderr, "do yy_1_Definition\n"));
   {
+#line 0
    if (push(beginRule(findRule(yytext)))->rule.expression) fprintf(stderr, "rule '%s' redefined\n", yytext); ;
   }
 #undef yythunkpos
